Fixed an alignment issue on mobile phones, renamed showcase content to fit on single lines even for mobile, x-positioned photos for mobile, created a meaningful intro blurb.

--- a/css/style-1.css
+++ b/css/style-1.css
@@ -131,6 +131,7 @@ a {
 .content-text h1 {
   color: white;
   font-size: 21px;
+  text-align: left;
 }
 
 .content-text p {
@@ -141,6 +142,7 @@ a {
 #woodresin {
   background: url(../images/cover.JPG);
   background-size: cover;
+  background-position-x: 63%;
   background-position-y: 15%;
   background-repeat: no-repeat;
 }
@@ -148,6 +150,7 @@ a {
 #photography {
   background: url(../images/ex2.jpg);
   background-size: cover;
+  background-position-x: 72%;
   background-position-y: 48%;
   background-repeat: no-repeat;
 }
@@ -155,6 +158,7 @@ a {
 #ee192 {
   background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0) 81%, rgba(0,0,0,1)), url(../images/ee192/workbench.jpg);
   background-size: cover;
+  background-position-x: 63%;
   background-position-y: 45%;
   background-repeat: no-repeat;
 }
@@ -162,6 +166,7 @@ a {
 #nokia {
   background: url(../images/watch/cover.jpg);
   background-size: cover;
+  background-position-x: 57%;
   background-position-y: 33%;
   background-repeat: no-repeat;
 }
